--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anijitsahu/mu.git"
+    "url": "git+https://github.com/anijitsahu/react-app-simple-music-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/anijitsahu/mu/issues"
+    "url": "https://github.com/anijitsahu/react-app-simple-music-app/issues"
   },
-  "homepage": "https://github.com/anijitsahu/mu#readme",
+  "homepage": "https://github.com/anijitsahu/react-app-simple-music-app#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
@@ -35,8 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
-    "mathjs": "^5.2.1",
+    "css-loader": "^1.0.0",    
     "mini-css-extract-plugin": "^0.4.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
