--- a/package.json
+++ b/package.json
@@ -1,46 +1,38 @@
 {
-  "name": "react-app-simple-music-app",
-  "version": "2.0.0",
+  "name": "music-app",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node -r dotenv/config server/server.js dotenv_config_path=server/.env"
-  },
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anijitsahu/react-app-simple-music-app.git"
+    "client:build": "node_modules/.bin/webpack --mode production --config ./public/webpack.config.js",
+    "client:dev": "node_modules/.bin/webpack --mode development --config ./public/webpack.config.js",
+    "client:start": "node_modules/.bin/http-server ./public/dist/ -c-1 --cors -d false",
+    "server:build": "node_modules/.bin/tsc -p server/tsconfig.json",
+    "server:start": "node -r dotenv/config ./server/dist/server.js dotenv_config_path=./server/.env"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anijitsahu/react-app-simple-music-app/issues"
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "copy-webpack-plugin": "^11.0.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
-  "homepage": "https://github.com/anijitsahu/react-app-simple-music-app#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "helmet": "^4.6.0",
-    "mongodb": "^4.2.2",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "axios": "^0.24.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http-server": "^14.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1"
   }
 }
