--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "style-loader": "^3.3.1"
   }
 }
