--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "http-server": "^14.1.1",
+    "mongodb": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
