database credentials modified

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ PORT=3000
 
 # database related
 # the new database followed by the older one
-URI_TO_CONNECT_MONGODB="mongodb+srv://root:root123@anijitsmongodb.l73ta.mongodb.net/allapps?retryWrites=true&w=majority"
+URI_TO_CONNECT_MONGODB="mongodb+srv://test:test1234@anijitsmongodb.l73ta.mongodb.net/allapps?retryWrites=true&w=majority"
 DB_NAME=allapps
 COLLECTION_MUSIC=musics
 
