--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -6,6 +6,7 @@
     "jsx": "react-jsx",
     "sourceMap": true /* SourceMap must be present in webpack config and here*/,
     "skipLibCheck": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "noImplicitAny": true
   }
 }
